# contracts

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  Taskfile.yaml  Taskfile.yml  buf.gen.adoc.tmpl  buf.gen.docs.yaml  buf.gen.python.yaml  buf.gen.yaml  buf.yaml  go.mod  go.sum  pyproject.toml
proto/backend/feed/kafka/v1/: operation.proto
proto/backend/origination/kafka/v1/: account.proto
proto/backend/partnerconsumer/kafka/v1/: deposit.proto  order.proto
proto/backend/partnerproxy/v1/: account.proto  finance_api.proto  order_api.proto
proto/backend/trading/v1/: account.proto  account_api.proto  finance_api.proto  order.proto  order_api.proto
scripts/buf/: build-image.sh  cleanup.sh  gen_docs.sh  go-code-compile-check.sh  run.sh
scripts/ci/: buf-breaking.sh  check-changes.sh  wait-docker-ready.sh
